fix broken user layout bug

--- a/bibsonomy-webapp/src/main/webapp/resources/css/style.css
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/style.css
@@ -499,6 +499,7 @@ li.uploadinfo {
 .listhButtons {
 	float: right;
 	margin-right: 0 ! important;
+	margin-top: -1.2em;
 	padding: 0;
 }
 
